# python-dsa

./: .gitignore  .pre-commit-config.yaml  CHEATSHEET.md  README.md  pyproject.toml
.github/workflows/: notebooks.yml
0-foundations/: 01-big-o.ipynb  02-python-idioms-for-dsa.ipynb  03-cpython-cost-model.ipynb
1-data-structures/: 02-strings.ipynb  04-heaps.ipynb  06-stacks-and-queues.ipynb  07-trees.ipynb  08-tries.ipynb  09-graphs.ipynb  10-fenwick-and-segment-trees.ipynb  11-lru-cache.ipynb  11-spatial-and-persistent-structures.ipynb  13-probabilistic-structures.ipynb  14-systems-data-structures.ipynb
2-algorithms/: 01-sorting.ipynb  02-searching.ipynb  03-selection.ipynb  04-recursion-and-backtracking.ipynb  05-divide-and-conquer.ipynb  05-dynamic-programming.ipynb  06-dynamic-programming.ipynb  06-graph-algorithms.ipynb  07-advanced-dynamic-programming.ipynb  08-dp-optimizations.ipynb  08-greedy.ipynb  08-string-algorithms.ipynb  09-number-theory.ipynb  09-suffix-structures.ipynb  09-tree-algorithms.ipynb  10-advanced-tree-decompositions.ipynb  12-advanced-graph-algorithms.ipynb  12-number-theory.ipynb  13-computational-geometry.ipynb  13-max-flow-and-matching.ipynb  14-string-algorithms.ipynb  16-suffix-automaton-and-tree.ipynb  17-bit-manipulation.ipynb  18-greedy.ipynb  19-number-theory.ipynb  20-combinatorics.ipynb  21-advanced-number-theory.ipynb  22-fft-and-polynomials.ipynb  23-computational-geometry.ipynb  24-sqrt-decomposition-and-offline.ipynb  25-randomized-algorithms.ipynb
3-patterns/: 01-two-pointers.ipynb  02-sliding-window.ipynb  03-prefix-sums-and-difference-arrays.ipynb  04-monotonic-stack-and-queue.ipynb  05-top-k-and-k-way-merge.ipynb  06-cyclic-sort.ipynb  07-combinatorial-generation.ipynb  08-coordinate-compression.ipynb  09-meet-in-the-middle.ipynb  10-sweep-line.ipynb  11-grid-and-matrix-traversal.ipynb
algorithms/: graph-algorithms.ipynb  recursion-and-backtracking.ipynb  searching.ipynb  sorting.ipynb
binder/: requirements.txt
data-structures/: _template.ipynb  arrays.ipynb  dictionaries-and-sets.ipynb  linked-lists.ipynb  strings.ipynb  trees.ipynb
scripts/: check_outputs_fresh.py
