[project]
name = "python-dsa"
version = "0.1.0"
description = "Notes and runnable examples on data structures & algorithms, focused on CPython internals"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "numpy>=2.4.6",
    "sortedcontainers>=2.4.0",
]

[dependency-groups]
dev = [
    "nbmake>=1.5.5",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# These are teaching notebooks. Compact one-liners, per-section re-imports, and
# l/r index names are deliberate house style — not mistakes. Keep the real-bug
# catchers (pyflakes F, syntax E9, E711/E712/E722) and silence the rest.
select = ["E4", "E7", "E9", "F"]
ignore = [
    "E701",  # if cond: stmt          — compact demo one-liners
    "E702",  # stmt; stmt             — compact demo one-liners
    "E401",  # import a, b            — compact, intentional
    "E402",  # import mid-notebook    — each section re-imports to stand alone
    "E731",  # f = lambda ...         — fine in a throwaway demo
    "E741",  # ambiguous name 'l'     — used for a left index throughout
    "F811",  # redefined-while-unused — cells are intentionally self-contained
]

[tool.pytest.ini_options]
# Execute every notebook end-to-end and fail on any cell error (nbmake).
# Runs in memory — does NOT overwrite saved outputs.
addopts = "--nbmake --nbmake-timeout=180"
testpaths = ["0-foundations", "1-data-structures", "2-algorithms", "3-patterns"]
norecursedirs = [".ipynb_checkpoints", ".venv", ".git", "templates"]
